Form spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ width:80%;
 height: 30px;
 float: left;
 border: 1px solid #b8b8b8;
-margin-top: 0px;
+margin-bottom: 20px;
 background-color: #ffffff;
 }
 
@@ -178,7 +178,6 @@ width:80%;
 float: left;
 height: 120px;
 border: 1px solid #b8b8b8;
-margin-top: 20px;
 background-color: #ffffff;
 }
 
